# GraphRelax

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  publish.yml  test.yml
graphrelax/: relaxer.py  utils.py
graphrelax/LigandMPNN/openfold/np/: protein.py
graphrelax/LigandMPNN/openfold/np/relax/: amber_minimize.py  cleanup.py  utils.py
graphrelax/LigandMPNN/openfold/utils/: loss.py
scripts/: download_weights.sh
src/graphrelax/: __init__.py  artifacts.py  chain_gaps.py  cli.py  config.py  designer.py  idealize.py  ligand_utils.py  pipeline.py  relaxer.py  utils.py  weights.py
src/graphrelax/LigandMPNN/: data_utils.py  sc_utils.py
src/graphrelax/LigandMPNN/openfold/np/relax/: amber_minimize.py  cleanup.py  relax.py
src/graphrelax/LigandMPNN/openfold/utils/: tensor_utils.py
tests/: conftest.py  test_artifacts.py  test_chain_gaps.py  test_cli_integration.py  test_designer_integration.py  test_idealize.py  test_ligand_utils.py  test_pipeline_integration.py  test_relaxer_integration.py  test_weights.py
